# hpc_docs

./: .buildinfo  .gitignore  .gitmodules  LICENSE  README.md  about.html  access.html  accounts.html  combined_desktop-nv470-cuda114.def  combined_desktop.def  form.js  genindex.html  gnome_desktop_3.28-nv470-cuda114.def  hpc_docs_a11y_scan  index.html  intro.html  m3_migration.html  mate_desktop_1.16-nv470-cuda114.def  mp_update.html  objects.inv  portal.html  quickstart.html  rstudio.def  rstudio_stat3341.def  search.html  searchindex.js  welcome.html  work_deprecation.html
.github/workflows/: a11y-scan.yml  ci.yml  deploy.yml  modules_ci.yaml
_downloads/a5a66b5ca25cd42826be7e4f00c2bbac/: bioinformatics.yml
_downloads/bf48c70ca74908bba8eb6da099f1935a/: r.yml
_sources/: about.md  access.md  accounts.md  index.md  intro.md  portal.md  work_deprecation.md
_sources/about/: contact.md  queues.md  systems.md
_sources/applications/: vscode.md
_sources/coldfront/: add_change_project.md  add_class.md  add_remove_users.md  faq.md  optout.md  qs_instructor.md  qs_student.md  quick_start.md  request_change_allocation.md  running_jobs.md
_sources/examples/: chemistry.md
_sources/m2/: about.rst
_sources/policies/: policies.md  scratch.md
_sources/tutorials/: clone_constellate.md  globus_box_transfers.md  intro.md
about/: contact.html  faculty_partner.html  queues.html  systems.html
announcements/: maintenance_sb26.html
applications/: other_applications.html  vscode.html
bc_desktop/: form.yml  form.yml.2021-10-29_1351  form.yml.erb  submit.yml.erb
biostats_mcgee/: Dockerfile  biostats.lua  build_images.sh  install_packages.R
coldfront/: add_change_project.html  add_class.html  add_metadata.html  add_remove_users.html  archive_project.html  faq.html  optout.html  qs_instructor.html  qs_student.html  quick_start.html  renewals.html  renewels.html  request_change_allocation.html  running_jobs.html  usage_stats.html
combined_desktop/: form.yml.erb  manifest.yml  submit.yml.erb
combined_desktop/template/: script.sh.erb
common/: form.js  initializer_scripts.rb
containers/: README.md  amber.dockerfile  combined_desktop-nv470-cuda114.def  combined_desktop.def  gnome_desktop_3.28.def  mate_desktop_1.16-nv470-cuda114.def  qgis-3.16.16-nv470-cuda114.def  qgis-3.16.16.def  snid_pgplot.def  xfce_desktop_4.12-nv470-cuda114.def  xfce_desktop_4.12.def
containers/RStudio/: Dockerfile  README.md
containers/alphafold/: Dockerfile  build_images.sh
containers/biostats_mcgee/: Dockerfile  biostats.lua  build_images.sh  install_packages.R
containers/biostats_r/: Dockerfile  biostats_r.def
containers/code-server/: build_container.sh  build_gpu_container.sh  code_server.def  code_server_gpu.def
containers/elementary-supernova/: Dockerfile  build_images.sh  upload.sh
containers/genomics_wright/: fastx.patch2
containers/kbnk/: kbnk.def
containers/molden/: Dockerfile  build_images.sh
containers/mp_base/: .gitattributes  create_docker_file.sh  orig_dgx_apt_installed.txt  trimmed_install_list.txt  z00_lmod.csh  z00_lmod.sh  zz00_lmod.csh  zz00_lmod.sh
containers/ollama/: build_container.sh
containers/open3d_STARS/: 0.16.1+ab6bf430c.lua  Dockerfile
containers/r/: build_container.sh
containers/remote_desktop/: 20.04_build.sh  20.04_desktop.def  almalinux_desktop.def  almalinux_gpu_desktop.def  build.sh  build32.sh  build_almalinux_desktop.sh  build_almalinux_gpu_desktop.sh  build_gpu_enabled.sh  desktop.def  desktop32.def  desktop_gpu_enabled.def
def/: gnome_desktop_3.28-nv470-cuda114.def  mate_desktop_1.16.def
docs/: README.md  _config.yml  _sidebar.md  _toc.yml  about.md  access.md  accounts.md  acquisition.md  coldfront.md  external_facilities.md  index.html  index.md  intro.md  m3_migration.md  mp_update.md  portal.md  portal.rst  quickstart.md  work_deprecation.md
docs/_static/: no_code_block_number.css
docs/about/: contact.md  faculty_partner.md  queues.md  systems.md
docs/announcements/: maintenance_sb26.md
docs/applications/: other_applications.md  python.md  vscode.md
docs/coldfront/: add_change_project.md  add_class.md  add_metadata.md  add_remove_users.md  archive_project.md  faq.md  optout.md  qs_student.md  (+6 more)
docs/examples/cpp/classes/: CMakeLists.txt  simple_inheritance.cpp  vector_class.cpp
examples/: chemistry.html  fluid_dynamics.html  statistics.html
examples/cpp/armadillo/: CMakeLists.txt
examples/cpp/classes/: CMakeLists.txt  eigen_demo.cpp  inheritance_test.cpp  simple_inheritance.hpp  vector_class.hpp  vector_test.cpp
examples/cpp/kokkos/: CMakeLists.txt  build_and_run.sh  stokeslets.cpp  sum_array.cpp
examples/ncteqpp/: CMakeLists.txt  ncteqpp_run_setup.sh
genomics_wright/: Dockerfile  README.md  fastx.patch
gnome3_desktop/: form.yml.erb  submit.yml.erb
jupyter/: form.yml  form.yml.2021-11-08_1200  form.yml.erb  form.yml.orig  form.yml.orig.04.02.2021  manifest.yml  submit.yml.erb  submit.yml.erb.2021-12-09_1129
jupyterlab/: form.yml  form.yml.04.02.2021  form.yml.2021-11-08_1222  form.yml.erb  info.md.erb  manifest.yml  submit.yml.erb
m2/: about.html
m3/: about.html
mate_desktop/: form.yml.erb  manifest.yml  submit.yml.erb
matlab/: form.yml.2022-01-21_1024  form.yml.erb  form.yml.orig  manifest.yml  submit.yml.erb
mp/: about.html
open3d_STARS/: Dockerfile
policies/: policies.html  scratch.html
qgis/: form.yml.erb  manifest.yml  submit.yml.erb
rstudio/: form.yml  form.yml.erb  form.yml.sav  manifest.yml  submit.yml.erb  submit.yml.erb.sav  view.html.erb
sas/: CHANGELOG.md  README.md  form.js  form.yml  manifest.yml
sif/: README.md
test/: 00.sbatch
tutorials/: clone_constellate.html  globus_box_transfers.html  intro.html  navigating_jupyterlab.html
workshops/: Makefile  conclusion.tex  econ_overview.tex  github.tex  hpc_sdk.tex  introduction.tex  mpi4py_and_nccl.tex  mpi_nccl_nvshmem.tex  oneapi.tex  overview.tex  parallel_stl.tex  python_worflows.tex  r_workflows.tex  singulary_and_spack.tex  slurm_python.tex  slurm_r.tex
xfce_desktop/: form.yml.erb  manifest.yml  submit.yml.erb
(+709 files in other folders)
